--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -21,12 +21,12 @@
    "id": "46bee5c5-1e0f-4d0d-bf98-eae54b971b12",
    "metadata": {},
    "source": [
-    "## Objectives:\n",
+    "**Objectives:**\n",
     "- List popular languages for Data Science\n",
     "- List commonly used libraries for Data Science\n",
     "- List Data Science Tools - Development environment open source tools\n",
-    "- Few example of evaluating arithmetic\n",
-    "- Few example of converting the time"
+    "- Example of evaluating arithmetic\n",
+    "- Example of converting the time"
    ]
   },
   {
@@ -55,8 +55,7 @@
     "2. Pandas\n",
     "3. Scikit-Learn\n",
     "4. Matplotlib\n",
-    "5. Plotly\n",
-    "6. Seaborn"
+    "5. Keras"
    ]
   },
   {
@@ -67,7 +66,7 @@
     "|  Data Science Tools  |\n",
     "|  ------------------  |\n",
     "|      R Studio        |\n",
-    "|     Jupyter Lab      |\n",
+    "|   Jupyter Notebook   |\n",
     "|    Apache Zeppelin   |"
    ]
   },
@@ -103,25 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "481af746-68f4-411a-bb9d-eac5162e6827",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3:20\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# This will convert 200 minutes to hours by diving by 60\n",
-    "total_minutes = 200\n",
-    "hours = total_minutes // 60\n",
-    "minutes = total_minutes % 60\n",
-    "time = \"{}:{}\".format(hours, minutes)\n",
-    "print(time)"
+    "200 // 60"
    ]
   },
   {
